Fix too wide button styles

--- a/sass/gutenberg/layout/_button.scss
+++ b/sass/gutenberg/layout/_button.scss
@@ -1,6 +1,6 @@
 // Buttons inside Gutenberg
 // We have to override default wp-admin blue buttons
-.wp-core-ui .wp-block {
+.wp-block .acf-block-preview {
   button,
   .button,
   input[type="reset"],
